# ATTD

./: .gitignore  README.md
backend/: .env.example  clients.py  logs.txt  main.py  middleware.py  pyproject.toml  ruff.toml
backend/app/modules/api_keys/: models.py  routes.py  schemas.py
backend/app/modules/api_keys/services/: key_manage.py
backend/app/modules/auto_generation/: agents.py  models.py  prompts.py  routes.py  schema.py  service.py  service_definations.py
backend/app/modules/autocompletion/: prompt.md  routes.py  schemas.py  services.py
backend/app/modules/chat_qa/: __init__.py  handle_agentic_request.py  handle_basic_request.py  models.py  routes.py  schema.py  service.py
backend/app/modules/git_repo_setup/: management_services.py  models.py  routes.py  schemas.py  services.py
backend/app/modules/inline_qna/: agents.py  models.py  prompts.py  routes.py  schema.py  services.py
backend/app/modules/mcp_controller/: models.py  routes.py  schemas.py
backend/app/modules/mcp_controller/services/: cross_module.py
backend/app/modules/page_management/: models.py  routes.py  schema.py  service.py
backend/app/modules/snippet_management/: models.py  routes.py  schema.py  service.py
backend/app/modules/user_module/: models.py  routes.py  schemas.py  services.py
backend/core/: clients.py  config.py  llm_clients.py  log_util.py  logger.py  middleware.py  postgres_db.py
backend/services/: repo_clone.py
backend/utils/: auth_redis.py  git_repo_setup_utils.py  key_hash.py  log_util.py  mermaid_generation_validation.py  s3_utils.py
mcp/: main.py  (+4 more)
(+98 files in other folders)
