[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.120.0",
    "uvicorn",
    "openai>=1.0.0",
    "python-dotenv",
    "tiktoken",
    "pymongo[srv]>=4.15.3",
    "boto3>=1.40.62",
    "httpx>=0.27.0",
    "langfuse>=3.7.0",
    "clerk-backend-api>=2.1.0",
    "ordered-set>=4.1.0",
]

[dependency-groups]
dev = [
    "tinydb>=4.8.2",
]
